# 6DoF-Auraliser

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
C/: CMakeLists.txt
C/core/: CMakeLists.txt
C/core/include/: proposed.h  proposed_analysis.h  proposed_synthesis.h
C/core/src/: proposed_analysis.c  proposed_internal.c  proposed_internal.h  proposed_synthesis.c
C/interface/: CMakeLists.txt
C/interface/include/: interface.h
C/interface/src/: interface.c  interface_internal.c  interface_internal.h
C/test/: CMakeLists.txt  unit_tests.c  unit_tests.h  unit_tests_wrapper.cpp
C/test/resources/: timer.c
C/test/test.xcodeproj/: project.pbxproj
C/test/test.xcodeproj/xcshareddata/xcschemes/: test.xcscheme
audio_plugin/: CMakeLists.txt  proposed.jucer
audio_plugin/resources/: ProposedLookAndFeel.h  log2dSlider.cpp  log2dSlider.h
audio_plugin/src/: ListenerWindow.cpp  ListenerWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
